# bevy-jam-5

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: level0.lvl
assets/image/character/: snowman.aseprite
assets/image/object/: cloud.aseprite  mini_snow.aseprite
assets/image/tile/: texture_map.aseprite
assets/level/: level0.lvl  level0.lvl.json  level1.lvl.json  level2.lvl.json  level3.lvl.json  level4.lvl.json  level5.lvl.json  level999.lvl.json
src/: camera.rs  day_night.rs  debug.rs  instruction_screen.rs  main.rs  math.rs  player.rs  timer.rs  win.rs  z_indecies.rs  z_indices.rs
src/day_night/: mod.rs  music.rs  night.rs  shadow.rs
src/debug/: editor.rs  mod.rs
src/levels/: data.rs  hazard.rs  level_loader.rs  mod.rs
src/player/: melting.rs  mod.rs  movement.rs  respawn.rs
