[package]
name = "bevy-jam-5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0", features = ["file_watcher"] }
#bevy_dylib = { version = "0.14.0-rc.3" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
bevy_rapier2d = "0.27.0"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
